# bw_simple_graph

./: .coveragerc  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  setup.cfg  setup.py
bw_simple_graph/: __init__.py
data/: gcc.csv  nodes.csv
docs/: conf.py  index.rst
src/bw_simple_graph/: skeleton.py
tests/: conftest.py  test_skeleton.py
