[metadata]
name = bw_simple_graph
description = A simple graph database backend without bw2data
author = Chris Mutel
author_email = cmutel@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/brightway-lca/bw_simple_graph

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =bw_simple_graph

install_requires =
    importlib-metadata; python_version<"3.8"
    bw_processing
    fs
    numpy
    peewee
    psycopg2


[options.packages.find]
where = bw_simple_graph
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]

[tool:pytest]
addopts =
    --cov bw_simple_graph --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel
